# PI_NEGOCIO-AL-DIA

./: .env.example  .gitignore  API_SPECIFICATIONS_PI_NAD.md  DESPLEGUE_RENDER.md  DOCUMENTACION_COMPLETA_PI_NAD.md  Dockerfile  ESTADO_FINAL.md  ESTADO_FLUTTER.md  GUIA_IMPLEMENTACION_TECNICA_PI_NAD.md  GUIA_USUARIO_PI_NAD.md  INICIO_RAPIDO.md  PLAN_MARKETING_VENTAS_PI_NAD.md  Procfile  README.md  README_DESPLEGUE.md  README_LOCAL.md  RESUMEN_EJECUTIVO_PI_NAD.md  RESUMEN_FINAL.md  demo.py  docker-compose.yml  main.py  prometheus.yml  pytest.ini  requirements.txt  run_all_in_one.py  setup.py  test_render.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  email_utils.py  extraction.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  dashboard.py  documents.py
cloud_functions/: openapi.yaml
config/: config.py  config_local.py
docs/: DESPLEGUE_COMPLETO.md  FASE_3_INVESTIGACION_COMPLETA.md  FASE_4_IMPLEMENTACION.md  FASE_4_INVESTIGACION_COMPLETA.md  GUIA_DESARROLLADOR.md  IDENTIDAD_VISUAL_PINAD.md  INTEGRACION_ASSETS_OCR.md
entregable_Keem/: ANALISIS_ESTADO_ACTUAL.md  ARQUITECTURA_AGENTES_IA.md  ARQUITECTURA_WEB.md  CONFIGURACION_BASE_DATOS.md  DASHBOARD_INTELIGENTE_CLIENTES.md  GOOGLE_WORKSPACE_CREDENTIALS.md  GUIA_IMPLEMENTACION.md  INTEGRACION_GOOGLE_WORKSPACE.md  MOTOR_OCR_CLOUD_FUNCTIONS.md  README.md  SISTEMA_MULTI_TENANCY.md  SUPABASE_CONFIG.md
frontend/: index.html  package-lock.json
pinad_app/: .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  README.md  (+5 more)
(+205 files in other folders)
