[project]
name = "pi-nad-web"
version = "0.1.0"
description = "Pi NAD - Web app gratuita para escanear documentos, extraer datos y dashboard inteligente"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.18",
    "PyJWT==2.10.1",
    "google-auth==2.37.0",
    "requests==2.32.3",
    "pdfplumber==0.11.4",
    "PyMuPDF==1.25.1",
    "pytesseract==0.3.13",
    "Pillow==11.0.0",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
]

[tool.setuptools]
packages = ["app"]
